package se.lexicon.em.exceptions;

/**
 * @author User
 * Exception thrown if the garage has no free parking places.
 */
public class GarageFullException extends Exception {

}
