package se.lexicon.em.exceptions;

public class VehicleNotFoundException extends Exception {

}
