package se.lexicon.em.utilities;

public enum ParkingStatusType
{
	UNKOWN, PARKED, NOT_PARKED,ON_FIRE

}
